# bevy_test_platformer

./: Cargo.toml
assets/: settings.physics.ron
src/: ground.rs  loader.rs  main.rs  physics.rs  player.rs  player_fsm.md  player_fsm.rs  settings_loader.rs  state.rs
