[package]
name = "bevy_test_platformer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_asset_ron = { path = "../bevy_asset_ron" }
emergent = { path = "../emergent" }
# bevycheck = { path = "../bevycheck" }
serde = "1"